GUI: Replace "Bitcoin" with "Liquid" in appropriate strings

--- a/src/qt/forms/sendcoinsentry.ui
+++ b/src/qt/forms/sendcoinsentry.ui
@@ -57,7 +57,7 @@
       <item>
        <widget class="QValidatedLineEdit" name="payTo">
         <property name="toolTip">
-         <string>The Bitcoin address to send the payment to</string>
+         <string>The Liquid address to send the payment to</string>
         </property>
        </widget>
       </item>
